# bfs-gpu-sycl

./: .gitignore  CMakeLists.txt  README.md  data.json
environment/: spack.yaml
include/: exception_handler.hpp  metaprogramming_utils.hpp  unrolled_loop.hpp
scripts/: generator.py  plot.py  rootNodes.py  sort-binary.pl
src/: CMakeLists.txt  functions.hpp  graph_load.hpp  host.cpp  run_bfs_cpu.hpp  run_bfs_fpga.hpp  run_bfs_gpu.hpp
test-zone/: prefix-sum  prefix-sum.cpp
